Added code coverage plugin