@@ -16,15 +16,10 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<sonar.sources>src/main</sonar.sources>
-		<sonar.tests>src/test</sonar.tests>
-		<!-- Below property indicates the pattern of the test suite -->
-		<runSuite>**/*Test.class</runSuite>
-		<!-- Sonar-JaCoCo properties -->
-		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-		<sonar.language>java</sonar.language>
+
+			<!-- Do not configure plugin with properties -->
+			<surefire.plugin.argline>-XX:PermSize=128m -XX:MaxPermSize=256m</surefire.plugin.argline>
+
 	</properties>
 
 	<dependencies>
@@ -85,36 +80,93 @@
 			<version>5.5.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>org.jacoco.agent</artifactId>
+			<version>0.7.5.201505241946</version>
+			<classifier>runtime</classifier>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
 	<build>
 		<plugins>
-			<!-- Below plugin ensures the execution of test cases during maven build-->
+            <!--<plugin>-->
+                <!--<groupId>org.sonarsource.scanner.maven</groupId>-->
+                <!--<artifactId>sonar-maven-plugin</artifactId>-->
+                <!--<version>3.1.1</version>-->
+            <!--</plugin>-->
+				<!--<plugin>-->
+					<!--<groupId>org.apache.maven.plugins</groupId>-->
+					<!--<artifactId>maven-surefire-plugin</artifactId>-->
+					<!--<version>2.19.1</version>-->
+					<!--<configuration>-->
+						<!--<includes>-->
+							<!--<include>**/*Tests.java</include>-->
+						<!--</includes>-->
+					<!--</configuration>-->
+				<!--</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<includes>
-						<include>${runSuite}</include>
-					</includes>
+					<argLine>${surefire.plugin.argline} -XX:PermSize=256m -XX:MaxPermSize=1048m</argLine>
 				</configuration>
 			</plugin>
-
-			<!-- Sonar-JaCoCo integration plugin -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.6.201602180812</version>
+				<version>0.7.5.201505241946</version>
 				<configuration>
-					<destFile>${sonar.jacoco.reportPath}</destFile>
-					<append>true</append>
+					<excludes>
+						<exclude>org/company/*</exclude>
+					</excludes>
 				</configuration>
 				<executions>
 					<execution>
-						<id>agent</id>
+						<id>default-prepare-agent</id>
+						<phase>initialize</phase>
 						<goals>
 							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-check</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule implementation="org.jacoco.maven.RuleConfiguration">
+									<element>BUNDLE</element>
+									<limits>
+										<limit implementation="org.jacoco.report.check.Limit">
+											<counter>INSTRUCTION</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.0</minimum>
+										</limit>
+										<limit implementation="org.jacoco.report.check.Limit">
+											<counter>BRANCH</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.0</minimum>
+										</limit>
+										<limit implementation="org.jacoco.report.check.Limit">
+											<counter>CLASS</counter>
+											<value>MISSEDCOUNT</value>
+											<maximum>1000</maximum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
 						</goals>
 					</execution>
 				</executions>
